--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@types/jest": "^26.0.24",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
-    "concurrency": "^0.1.4",
     "eslint": "^8.19.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
@@ -33,7 +32,9 @@
   "scripts": {
     "test": "jest --config jest.config.js",
     "build": "tsc --project tsconfig.build.json",
-    "start:watch": "concurrency",
+    "start:watch": "concurrently \"yarn ts:dev\" \"yarn nodemon:dev\" \"yarn build\" -c \"auto,auto\" ",
+    "ts:dev": "tsc --watch --project tsconfig.build.json",
+    "nodemon:dev": "nodemon lib/index.js --watch",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint",
     "prepare": "npm run build",
@@ -61,9 +62,11 @@
   },
   "dependencies": {
     "amqplib": "^0.10.3",
+    "concurrently": "^8.2.0",
     "express": "^4.18.2",
     "module-alias": "^2.2.2",
     "module-alias-jest": "^0.0.3",
+    "nodemon": "^2.0.22",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.7.0"
   }
