--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "amqplib": "^0.10.3",
     "concurrently": "^8.2.0",
     "express": "^4.18.2",
+    "jimp": "^0.22.8",
     "module-alias": "^2.2.2",
     "module-alias-jest": "^0.0.3",
     "nodemon": "^2.0.22",
